GitVersion1/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New %28Submitted%29</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Produced</fullName>
        </values>
        <values>
            <fullName>Production Scheduled</fullName>
        </values>
        <values>
            <fullName>Shipped</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User submitting the case (source of the case). Should remain till case is solved.</description>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global Case (All Countries)</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>CQN - US</fullName>
                </value>
                <value>
                    <fullName>CQN - Canada</fullName>
                </value>
                <value>
                    <fullName>CPN - India</fullName>
                </value>
                <value>
                    <fullName>Surrey</fullName>
                </value>
                <value>
                    <fullName>Franklinton</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Age_in_Hrs__c</fullName>
        <formula>FLOOR((NOW() - CreatedDate)*24) + ((FLOOR(((((NOW() - CreatedDate)*24)-FLOOR((NOW() - CreatedDate)*24))*60))) / 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age in Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Close_Reason__c</fullName>
        <description>It used to select case close reason</description>
        <label>Case Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Customer PO</fullName>
                </value>
                <value>
                    <fullName>PO Follow Up</fullName>
                </value>
                <value>
                    <fullName>Logistics Complaint</fullName>
                </value>
                <value>
                    <fullName>Product Quality Complaint</fullName>
                </value>
                <value>
                    <fullName>Other Complaint</fullName>
                </value>
                <value>
                    <fullName>Product or Price Inquiry</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Customer 360</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Activities</fullName>
                </value>
                <value>
                    <fullName>Requests</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dasboards</fullName>
                </value>
                <value>
                    <fullName>BI Reports</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Salesforce1 (Mobile)</fullName>
                </value>
                <value>
                    <fullName>Mobile Device</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Translation</fullName>
                </value>
                <value>
                    <fullName>Settings | Configuration</fullName>
                </value>
                <value>
                    <fullName>PC Outlook | Riva</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>SFDC Admin Tools | Work Org</fullName>
                </value>
                <value>
                    <fullName>New User | Change | Roles etc.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_360__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer 360</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>Source:EmailMessage.ToAddress</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <description>It is used to store the comments when close reason is selected as other</description>
        <label>Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Poland_Case_Support_Team_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Categories__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Business__c</columns>
        <filterScope>Queue</filterScope>
        <label>All Poland Case Support Team</label>
        <language>en_US</language>
        <queue>Poland_Case_Support_Team</queue>
        <sharedTo>
            <roleAndSubordinates>Poland_MasterData_DataSteward</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CQN_NA_Surrey_Franklinton_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>CQN NA Surrey &amp; Franklinton</label>
        <language>en_US</language>
        <queue>CQN_NA_Surrey_Franklinton</queue>
        <sharedTo>
            <role>CQN_NA_Customer_Service_Manager</role>
            <role>CQN_NA_Customer_Service_Representative</role>
            <role>CQN_NA_Sales_Director</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Poland_Case_Support_Team_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Categories__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Business__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Poland Case Support Team</label>
        <language>en_US</language>
        <queue>Poland_Case_Support_Team</queue>
        <sharedTo>
            <roleAndSubordinates>Poland_MasterData_DataSteward</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_360_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_360__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Customer 360 Cases</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>Open_Poland_Case_Support_Team_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Categories__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Business__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open Poland Case Support Team</label>
        <language>en_US</language>
        <queue>Poland_Case_Support_Team</queue>
        <sharedTo>
            <roleAndSubordinates>Poland_MasterData_DataSteward</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Poland_My_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Categories__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Business__c</columns>
        <filterScope>Mine</filterScope>
        <label>Poland My Cases</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Poland_MasterData_DataSteward</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Surrey_Franklinton_ewosca_cs</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Email_Address__c</field>
            <operation>equals</operation>
            <value>ewosca_cs@cargill.com</value>
        </filters>
        <label>Surrey &amp; Franklinton(ewosca_cs)</label>
        <language>en_US</language>
        <queue>CQN_NA_Surrey_Franklinton</queue>
        <sharedTo>
            <role>CQN_NA_Customer_Service_Manager</role>
            <role>CQN_NA_Customer_Service_Representative</role>
            <role>CQN_NA_Sales_Director</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Surrey_Franklinton_usaqua_feedorders</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Email_Address__c</field>
            <operation>equals</operation>
            <value>usaqua_feedorders@cargill.com</value>
        </filters>
        <label>Surrey &amp; Franklinton(usaqua_feedorders)</label>
        <language>en_US</language>
        <queue>CQN_NA_Surrey_Franklinton</queue>
        <sharedTo>
            <role>CQN_NA_Customer_Service_Manager</role>
            <role>CQN_NA_Customer_Service_Representative</role>
            <role>CQN_NA_Sales_Director</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CQN_NA</fullName>
        <active>true</active>
        <businessProcess>Case Support Process</businessProcess>
        <label>CQN NA</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CaseClsoeReasonRequired</fullName>
        <active>true</active>
        <description>Case Close Reason is required when user status is selected as closed.</description>
        <errorConditionFormula>AND( 
OR($Profile.Name=&quot;Customer Service CQN-NA&quot;, $Profile.Name=&quot;Data Steward - CQN-NA&quot;, $Profile.Name=&quot;Sales Professional - CQN-NA&quot;), ISPICKVAL(Status,&quot;Closed&quot;), 
ISPICKVAL(Case_Close_Reason__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Case_Close_Reason__c</errorDisplayField>
        <errorMessage>Please select reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Reason_Update</fullName>
        <active>true</active>
        <description>Other Reason field is mandatory to fill , when Status is selected as Closed and Case reason is other.</description>
        <errorConditionFormula>AND( 
OR($Profile.Name=&quot;Customer Service CQN-NA&quot;, $Profile.Name=&quot;Data Steward - CQN-NA&quot;, $Profile.Name=&quot;Sales Professional - CQN-NA&quot;),  ISPICKVAL(Status,&quot;Closed&quot;),
ISPICKVAL(Case_Close_Reason__c,&quot;Other&quot;),
ISBLANK(Other_Reason__c ))</errorConditionFormula>
        <errorDisplayField>Other_Reason__c</errorDisplayField>
        <errorMessage>Please enter Other Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Polish_Profile_Restriction</fullName>
        <active>true</active>
        <description>Restriction for Polish Users forcing them to select BU=Poland. Field cannot be required globally, so only a validation rule locally can be implemented.</description>
        <errorConditionFormula>OR($Profile.Name = &quot;Polish user&quot; , $Profile.Name = &quot;Polish Data Steward | Log user&quot;, $Profile.Name = &quot;Polish Data Steward&quot;, $Profile.Name = &quot;Polish Customer Service User&quot;, $Profile.Name = &quot;Polish CS | Log user&quot;, $Profile.Name = &quot;Polish Credit Team User&quot; )</errorConditionFormula>
        <errorDisplayField>Business__c</errorDisplayField>
        <errorMessage>Select your BU = &quot;Poland&quot;. Proszę wybrać BU równy &quot;Poland&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Other_Reason</fullName>
        <active>true</active>
        <description>It is used to restrict user not to enter &quot;Other Reason&quot; field when Case Reason is not selected as Other.</description>
        <errorConditionFormula>AND( 
OR($Profile.Name=&quot;Customer Service CQN-NA&quot;, $Profile.Name=&quot;Data Steward - CQN-NA&quot;, $Profile.Name=&quot;Sales Professional - CQN-NA&quot;),  ISPICKVAL(Status,&quot;Closed&quot;), 
NOT(ISPICKVAL(Case_Close_Reason__c,&quot;Other&quot;)), 
NOT(ISBLANK(Other_Reason__c )))</errorConditionFormula>
        <errorDisplayField>Other_Reason__c</errorDisplayField>
        <errorMessage>This field is updated only when Case close reason is selected as Other.</errorMessage>
    </validationRules>
</CustomObject>